data/derived/comb/progs/unify/prog7588.ml.out
Characters 48-56:
  else n mod 10 @ digitofInt n/10;;
       ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
